<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elastica_kinematics</name>
  <version>0.0.1</version>
  <description>ROS2 package for Kinematics (PCC Kinematic State) of Cosserat Rods assembled in PyElastica</description>
  <maintainer email="prakarshkaushik369@gmail.com">root</maintainer>
  <license>MIT license</license>

  <depend>elastica_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
