<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elastica_sim_control</name>
  <version>0.1.1</version>
  <description>ROS2 package for PyElastica simulator for simulating assemblies of Cosserat Rods</description>
  <maintainer email="prakarshkaushik369@gmail.com">root</maintainer>
  <license>MIT license</license>

  <depend>elastica_msgs</depend>
  <!-- <depend>povray</depend> -->

  <build_depend>rosidl_default_generators</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>message_runtime</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
